p2/services/app2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
        - name: app-two 
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-index-file
              mountPath: /usr/share/nginx/html/
      volumes:
        - name: nginx-index-file
          configMap: 
            name: app-two-index-html-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: app-two-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: app-two
