p2/services/app3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
        - name: app-three 
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-index-file
              mountPath: /usr/share/nginx/html/
      volumes:
        - name: nginx-index-file
          configMap: 
            name: app-three-index-html-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: app-three-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: app-three
