p2/services/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress 
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
  - host: app1.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-one-service
            port:
              number: 80

  - host: "app2.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-two-service
            port:
              number: 80

  - host: "app3.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-three-service
            port:
              number: 80
  - http:                        
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-three-service
            port:
              number: 80
